--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,7 +14,10 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
         
-     # - name: Run a multi-line script
-      #  run: |
-         # echo Add other actions to build,
-         # echo test, and deploy your project.
+        
+      - name: Run a multi-line script
+        run: |
+            mkdir sample
+            cd sample
+            touch a.txt b.txt
+            ls
