--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,15 +9,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-     # - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+        with:
+            run: ls
       
-      - name: Run a one-line script
-        run: echo Hello, world!
-        
-        
-      - name: Run a multi-line script
-        run: |
-            mkdir sample
-            cd sample
-            touch a.txt b.txt
-            ls
+      
