--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,7 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2.3.4
       - name: Current Time
-        uses: gerred/current-time@v1.0.0
+        run: |
+              date
+              time
       
       
       
