--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,11 +9,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2.3.4
-      - name: Current Time
-        run: |
-              date
-              time
+         - name: Get current time
+           uses: 1466587594/get-current-time@v2
+           id: current-time
+           with:
+                 format: YYYYMMDD-HH
+                 utcOffset: "+08:00"
+         - name: Use current time
+           env:
+            TIME: "${{ steps.current-time.outputs.time }}"
+            R_TIME: "${{ steps.current-time.outputs.readableTime }}"
+            F_TIME: "${{ steps.current-time.outputs.formattedTime }}"
+            YEAR: "${{ steps.current-time.outputs.year }}"
+            DAY: "${{ steps.current-time.outputs.day }}"
+            run: echo $TIME $R_TIME $F_TIME $YEAR $DAY
       
       
       
